[package]
name = "mocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
#opt-level = "s"
strip = true
lto = true
#codegen-units = 1
#panic = "abort"

[dependencies]
axum = { version = "0.6.1", features = ["http2"] }
serde = { version = "1.0.151", features = ["derive"] }
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros"] }
